<resources>
    <string name="app_name">BLProductsApp</string>
    <string name="save">Save</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="name">Name</string>
    <string name="openSale">Open Sale</string>
    <string name="registerProduct">Register Products</string>
    <string name="barCode">Bar Code</string>
    <string name="realSign">R$</string>
    <string name="stock">Stock:</string>
    <string name="ListProduct">List Products</string>
</resources>